Fixed navbar not showing up against dark background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,23 +27,6 @@
   margin-bottom: 25px;
 }
 
-.image:after {
-  content: '\A';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
-
-.image:hover:after {
-  opacity: 1;
-}
-
 /* --------------- Images --------------- */
 
 #ryanPic {
@@ -120,7 +103,7 @@ p {
 
 #logo {
   color: white;
-  font-size: 2.3 rem;
+  font-size: 2.3rem;
   text-decoration: none;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
@@ -209,10 +192,9 @@ p {
     margin-top: 25px;
   }
   .contact-container {
-    margin-top: 40px;    
+    margin-top: 40px;
     margin-bottom: 100px;
   }
-
   .description_div {
     display: block;
     margin: 15px auto 0 auto;
@@ -225,12 +207,9 @@ p {
   .featured-work-title {
     padding: 30px 0;
   }
-
-
   .subheader-text {
-    padding-bottom:0px;
+    padding-bottom: 0px;
   }
-
   .descriptionContainer {
     margin-top: 40px;
     margin-bottom: 80px;
@@ -261,7 +240,6 @@ p {
     margin-top: 25px;
     width: 75%;
   }
-
   .contact-info {
     padding: 30px 0;
   }
@@ -269,7 +247,6 @@ p {
     width: 75%;
     margin-top: 25px;
   }
-
   #work {
     padding-bottom: 0px;
   }
